# modbusgw

./: Makefile  client.cpp  conf.json  main.cpp  makefile  meson.build  mgc  mgd  mgdc  note.md  registers.json  server.cpp  tool.cpp  type.h  writer.cpp
etc/config/: modbus
etc/init.d/: modbus  modbus.server
record/: 3001.txt  request.txt
service/: modbusgw  modbusgw.service  modbusgwSet
